<resources>
    <string name="app_name">Kothay</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Image</string>
    <string name="text">Upload an image to your post to get more traction</string>
    <string name="post">Post</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_best_job">Jobs for you</string>
    <string name="menu_job">All jobs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="title_activity_maps">Map</string>

</resources>
